--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             class="bg-LGMagenta rounded-md w-full xl:w-3/4 px-5 py-2 mb-4 text-dMagenta font-bold flex items-center flex-col md:flex-row gap-4"
           >
             <span class="flex"
-              ><img src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg"
+              ><img src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""
             /></span>
             <span class="h-4">Rated 5 Stars in Reviews</span>
           </div>
@@ -68,11 +68,11 @@
             class="bg-LGMagenta rounded-md w-full xl:w-3/4 px-5 py-2 mb-4 text-dMagenta font-bold flex items-center flex-col md:flex-row gap-4 md:ml-5"
           >
             <span class="flex"
-              ><img src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg"
+              ><img src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""
             /></span>
             <span class="h-4">Rated 5 Stars in BestTech</span>
           </div>
@@ -80,11 +80,11 @@
             class="bg-LGMagenta rounded-md w-full xl:w-3/4 px-5 py-2 mb-4 text-dMagenta font-bold flex items-center flex-col md:flex-row gap-4 md:ml-10"
           >
             <span class="flex"
-              ><img src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg" /><img
-                src="./images/icon-star.svg"
+              ><img src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""/><img
+                src="./images/icon-star.svg" alt=""
             /></span>
             <span class="h-4">Rated 5 Stars in BestTech</span>
           </div>
@@ -125,7 +125,7 @@
         </div>
         <div class="bg-dMagenta text-white p-10 rounded-xl max-h-96 min-h-60 md:mt-20">
           <div class="flex items-center gap-5">
-            <img class="rounded-full w-10 h-10" src="./images/image-anne.jpg"/>
+            <img class="rounded-full w-10 h-10" src="./images/image-anne.jpg" alt=""/>
             <div>
               <h2 class="font-bold">Anne Wallace</h2>
               <span class="text-sPink">Verified Buyer</span>
